test/SemanticAnalysis/Constants/DontTreatUnsignedConstantAsSigned.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

export void varFunction() {
	// CHECK: .loci:6:2: error: user cast failed from type 'uint8_t' to type 'notag(int_t)'
	unused int value = 42u;
}

// CHECK: 1 error generated.
